--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,9 @@ jobs:
 
       - name: Check formatting
         run: npm run format:check
+
+      - name: Run linting
+        run: npm run lint
   tests:
     name: Tests
     runs-on: ubuntu-latest
