--- a/package.json
+++ b/package.json
@@ -12,18 +12,25 @@
     "dev": "npx tsc && node dist/main.js",
     "test": "vitest --run",
     "format:write": "prettier --write \"src/**/*.{js,ts,json,css,md}\"",
-    "format:check": "prettier --check \"src/**/*.{js,ts,json,css,md}\""
+    "format:check": "prettier --check \"src/**/*.{js,ts,json,css,md}\"",
+    "lint": "eslint ."
   },
   "devDependencies": {
+    "@eslint/css": "^0.7.0",
+    "@eslint/js": "^9.25.1",
+    "@eslint/json": "^0.12.0",
+    "@eslint/markdown": "^6.4.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.0",
     "@vitest/coverage-v8": "^3.1.2",
     "drizzle-kit": "^0.28.1",
-    "globals": "^15.12.0",
+    "eslint": "^9.25.1",
+    "globals": "^15.15.0",
     "prettier": "3.5.3",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
+    "typescript-eslint": "^8.31.0",
     "vitest": "^3.1.2"
   },
   "dependencies": {
