--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,3 +23,14 @@ jobs:
 
       - name: Build
         run: npm run build
+
+      - id: auth
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+
+      - name: Submit build
+        run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-458100/notely-ar-repo/notely:latest .
